--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^18.11.9",
+    "@types/request": "^2.48.8",
     "@types/sharp": "^0.31.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -28,6 +29,7 @@
     "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.0",
+    "request": "^2.88.2",
     "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
